# simsearch

./: CMakeLists.txt  README.md
include/simsearch/: lsh.hpp  minhash.hpp
tests/: CMakeLists.txt  test_minhash.cpp
